kiali/kiali.yml
apiVersion: v1
kind: Service
metadata:
  name: kiali-external-test
  namespace: istio-system
spec:
  type: NodePort
  selector:
    app: kiali
  ports:
    - name: kiali-external-http
      protocol: TCP
      port: 20001
      targetPort: 20001
      nodePort: 30002
