kiali/kiali-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-ingress-vs
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - kiali-ingress-gw
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: kiali
            port:
              number: 20001
